# 2FA-tool

./: .gitmodules  CMakeLists.txt  README.md
src/: config.cpp  config.h  configdialog.cpp  configdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  qrdecoder.cpp  qrdecoder.h  totp.cpp  totp.h
src/QtTheme/: QtTheme_Flat_Dark_LightBlue_Indigo.qrc
